--- a/css/styles.css
+++ b/css/styles.css
@@ -11,6 +11,7 @@ img[alt="avatar"]{
     box-shadow: 0 0 0.3em black;
     padding:2em;
     border-radius: 0.8em;
+    margin-top:1em;
 }
 .proyecto img{
     width:100px;
