--- a/css/miestilo.css
+++ b/css/miestilo.css
@@ -6,10 +6,13 @@
       text-decoration: none;
   }
   
+img{
+    margin-right: 0;
+}
   
 @media only screen and (max-width: 600px) {
     img{
-        height:auto;
+        height:fit-content;
     }
     .flex-grow-1{
         padding-top:2em;
