--- a/css/miestilo.css
+++ b/css/miestilo.css
@@ -7,12 +7,15 @@
   }
   
 img{
-    margin-right: 0;
+    margin-right: 0 !important;
 }
   
 @media only screen and (max-width: 600px) {
     img{
-        height:fit-content;
+        height:fit-content !important;
+    }
+    .proyectos{
+        margin-top:22%;
     }
     .flex-grow-1{
         padding-top:2em;
