--- a/css/miestilo.css
+++ b/css/miestilo.css
@@ -10,9 +10,9 @@
   
 @media only screen and (max-width: 600px) {
     img{
-        height:300px !important;
-        margin-right: 0 !important;
-
+        height:200px !important;
+        width:200px !important;
+        margin:0 auto;
     }
     .proyectos{
         margin-top:22%;
